<resources>
    <string name="app_name">RetrofitConnection</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cadastro__usuario_">Cadastro_Usuario_Activity</string>
    <string name="castro_usuarios">Cadastro de Usuarios</string>
    <string name="cadastro_nome">Nome</string>
    <string name="title_activity_cadastro__usuarios">Cadastro_UsuariosActivity</string>
    <string name="cadastro_senha">Senha</string>
    <string name="cadastro_login">Login</string>
    <string name="cadastro_enviar">Enviar</string>
</resources>
